tests/fail/tip-hatası.kip

Bir doğal-sayı
ya sıfır
ya da bir doğal-sayının ardılı
olabilir.

bir, sıfırın ardılıdır.

(bu doğal-sayıyla) (şu doğal-sayının) toplamı,
  bu sıfırsa,
    şu,
  öncülün ardılıysa,
    (öncülle) (şunun ardılının) toplamıdır.

birle boşun toplamını yaz.
